--- a/src/assets/scss/all.scss
+++ b/src/assets/scss/all.scss
@@ -32,9 +32,36 @@ html {
 	font-size: 14px;
 	text-decoration: none;
 }
+// #body {
+// 	width: 100%;
+// 	height: 100vh;
+// 	overflow: hidden;
+// 	#root {
+// 		height: 100%;
+// 		overflow-y: scroll;
+// 		position: relative;
+// 		z-index: 1;
+// 	}
+// }
+#screen {
+	width: 100%;
+	max-height: 100vh;
+	min-height: 100vh;
+	z-index: 0;
+	position: absolute;
+}
 #root {
 	position: relative;
 	z-index: 1;
+}
+.rs-picker-date .rs-picker-toggle.rs-btn .rs-picker-toggle-clean,
+.rs-picker-daterange .rs-picker-toggle.rs-btn .rs-picker-toggle-clean,
+.rs-picker-date .rs-picker-toggle.rs-btn .rs-picker-toggle-caret,
+.rs-picker-daterange .rs-picker-toggle.rs-btn .rs-picker-toggle-caret {
+	transform: translateY(2px);
+}
+.rs-picker-menu {
+	z-index: 2;
 }
 .scroll {
 	&::-webkit-scrollbar-thumb {
