--- a/src/assets/scss/all.scss
+++ b/src/assets/scss/all.scss
@@ -9,8 +9,6 @@ html {
 :root {
 	--primary: #0e0b1e;
 	--secondary: #3445b3;
-	--third: #852dda;
-	--bottom: #852dda;
 	--letter: #67697d;
 	--letterInput: #959595;
 	--letterModeDark: #959595;
@@ -18,6 +16,8 @@ html {
 	--sizeInput: 3rem;
 	--border: #e8e8e8;
 	--gray10: #e2e2e2;
+	--themeMode: dark;
+	--heightNav: 70px;
 }
 * {
 	list-style: none;
@@ -120,6 +120,7 @@ html {
 .paragraph {
 	color: var(--letterModeDark);
 }
+
 @media (prefers-color-scheme: dark) {
 	.paragraph {
 		color: var(--letterModeDark);
