--- a/src/assets/scss/all.scss
+++ b/src/assets/scss/all.scss
@@ -65,6 +65,7 @@ html {
 }
 .scroll {
 	&::-webkit-scrollbar-thumb {
+		background-color: var(--primary);
 		opacity: 0.5;
 		border-radius: 4px;
 		position: fixed;
