feat: :lipstick: created modal
created modal global.

--- a/src/assets/scss/icons.scss
+++ b/src/assets/scss/icons.scss
@@ -4,3 +4,6 @@
 .icon-delete {
 	mask-image: url('../../assets/images/global/icons/icons-trash.svg');
 }
+.icon-close {
+	mask-image: url('../../assets/images/global/icons/close-icon.svg');
+}
